<resources>
    <string name="app_name">汕大课程表</string>
    <string name="title_activity_syllabus">课程表</string>
    <string name="help_message">在课表界面的菜单里可以设置默认学期</string>
    <string name="about_message">公众号: stusyllabus\n晓拂: 14xfdeng@stu.edu.cn(Android)\n呆杰: 13yjli3@stu.edu.cn(Android)\n俊皓: 14jhwang@stu.edu.cn(iOS)</string>
    <string name="github_app_address">安卓源码:\nhttps://github.com/Hjsmallfly/stu_syllabus</string>
    <string name="syllabus_get_api">/credit/api/v2/syllabus</string>
    <!--<string name="server_ip">http://121.42.175.83:8084</string>-->
    <!--<string name="server_ip">http://192.168.0.104:8080</string>-->
    <string name="server_ip">http://119.29.95.245:8080</string>
    <!--<string name="server_ip">http://172.18.58.117:8000</string>-->
    <string name="server_ip_debug">192.168.1.100</string>
    <string name="debug_port">5000</string>
    <string name="get_banner_api">/interaction/api/v2/banner</string>
    <string name="version_control_address">/interaction/api/v2/version</string>
    <string name="students_api">/credit/api/v2/member</string>
    <string name="get_exam_list_api">/credit/api/v2/exam</string>
    <string name="get_grades_api">/credit/api/v2/grade</string>
    <string name="get_oa_list_api">/credit/api/v2/oa</string>

    <string name="post_url_hint">请输入合法的URL</string>
    <string name="new_post_content_hint">内容或者描述</string>
    <string name="add_photo_button">添加图片</string>
    <string name="send_post_button">发布</string>

    <string name="title_activity_history">历史记录</string>
    <string name="title_activity_about">关于我们</string>
    <string name="action_settings">Settings</string>

    <string name="updated_text">正在检查更新</string>
    <string name="outdated_text">已经有新版本发布啦，还在等什么，快点我!!!</string>

    <string name="autumn">秋季\n学期</string>
    <string name="spring">春季\n学期</string>
    <string name="summer">夏季\n学期</string>

    <string name="version_code">1</string>
    <string name="version_name">v1.3.2</string>
    <string name="publisher">晓拂(14xfdeng) 呆呆杰(13yjli3)</string>

    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="username_hint">校园网账号</string>
    <string name="password_hint">校园网密码</string>

    <string name="query_syllabus_button">登\t\t录</string>

    <string name="query_grade_button">更新成绩</string>
    <string name="gpa_display_hint">这里显示GPA</string>

    <string name="grade_file">grade_file</string>

    <string name="oa_label">办公自动化(请接入内网使用)</string>
    <string name="oa_web_view_label">办公自动化详情页</string>

    <string name="update_message">[如果安装失败需要卸载旧版本, 再手动安装]\n[下载的apk文件在sd卡的download目录下]</string>

    <string name="BANNER_CACHED_FILE">banner_cached_file.txt</string>

    <!-- mainActivity 里面的功能按钮系列-->
    <string name="login_wifi_button_string">登录学校WIFI</string>
    <string name="query_syllabus_button_string">课程表</string>
    <string name="query_os_system_button_string">办公自动化</string>
    <string name="whatsup_in_school_button_string">校园动态</string>
    <string name="grade_button_string">成绩</string>
    <string name="exam_button_string">考试</string>
    <string name="back_to_login_string">注销</string>
    <!-- mainActivity 里面的功能按钮系列-->

    <string name="about_information">
        哈哈，你竟然点进这里来了!
        本来打算写点什么的，但是真到了要写的时候却不知道写什么了。
        诶诶，希望你喜欢这个应用: ) 那是最大的鼓励.
        By 晓拂, 2015/10/14 21:14
    </string>
    <string name="title_activity_update">fir.im/syllabus</string>
    <!--<string name="title_activity_main2">Main2Activity</string>-->
    <string name="title_activity_grade">查看成绩</string>
    <string name="title_activity_global_discuss">校园动态</string>
    <string name="title_activity_exam">考试信息</string>
    <string name="title_activity_personal_info">用户个人信息</string>

    <string name="help_activity_message">帮助:\n
        1.登录流量验证, 快速登录学校的WIFI, 不用再去浏览器手动登录上网.\n
        2.校园动态, 新版本的校园动态可以发图片, 点赞, 评论, 同时也可以更换头像.\n
        3.东门外卖, 订外卖的实用工具, 提供快捷拨号功能.\n
        4.如果提示登录超时, 则需要进课表界面重新同步一次课表.\n
        5.apk短地址: fir.im/syllabus(觉得好用请推荐给朋友~).\n
    </string>

    <!-- comment item 相关-->
    <string name="comment_nickname">昵称</string>
    <string name="comment_time">时间</string>
    <string name="comment_content">内容</string>
    <string name="comment_area">用户评论(点击标题栏图案发表评论): </string>
    <string name="post_comment">评论</string>
    <!-- comment item 相关-->

    <string name="image_activity">photo</string>

    <!--自己添加课程的布局-->
    <string name="custom_name">* 课程名字</string>
    <string name="custom_number">课程班号</string>
    <string name="custom_room">课程教室</string>
    <string name="custom_teacher">课程老师</string>
    <string name="start_week">* 开始周 </string>
    <string name="end_week">* 结束周 </string>
    <string name="start_time">* 开始节数</string>
    <string name="end_time">* 结束节数</string>
    <string name="custom_weekday">* 星期几(从1开始, 7是周日) </string>
    <string name="odd_week">单周</string>
    <string name="even_week">双周</string>
    <string name="all_week">默认</string>

    <string name="custom_notice">* 号项目必填, 长按课程格子删除课程</string>

    <string name="class_credit">课程学分</string>
    <string name="custom_duration">课程周数</string>
    <string name="custom_time">上课时间 节数范围: 1, 13</string>
    <!--自己添加课程的布局-->

</resources>
