<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/custom_notice"
        android:textColor="@android:color/holo_red_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_name"
        android:hint="@string/custom_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/custom_time"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/custom_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_weekday"
        android:inputType="numberSigned"
        android:digits="0123456789"
        android:hint="@string/custom_weekday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/start_time"
            android:inputType="numberSigned"
            android:digits="0123456789"
            android:hint="@string/start_time"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/end_time"
            android:hint="@string/end_time"
            android:inputType="numberSigned"
            android:digits="0123456789"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>



    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/custom_class_duration"
        android:hint="@string/custom_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/start_week"
            android:inputType="numberSigned"
            android:digits="0123456789"
            android:hint="@string/start_week"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/end_week"
            android:hint="@string/end_week"
            android:inputType="numberSigned"
            android:digits="0123456789"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RadioGroup
        android:layout_gravity="right"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/all_week_radio"
            android:checked="true"
            android:text="@string/all_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/single_week_radio"
            android:text="@string/odd_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/double_week_radio"
            android:text="@string/even_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>


    <EditText
        android:id="@+id/custom_id"
        android:hint="@string/custom_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_teacher"
        android:hint="@string/custom_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_room"

        android:hint="@string/custom_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/custom_credit"
        android:inputType="numberDecimal"
        android:hint="@string/class_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>