<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/comment_nickname"
        android:textColor="#576B95"
        android:layout_gravity="start"
        android:textStyle="bold"
        android:text="@string/comment_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/comment_content"
        android:text="@string/comment_content"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/comment_time"

        android:textSize="12sp"
        android:text="@string/comment_time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

</LinearLayout>
