<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    >
    <!--android:background="@drawable/login_background"-->

    <!--<ImageView-->
        <!--android:layout_margin="10dp"-->
        <!--android:layout_above="@+id/input_area"-->
        <!--android:src="@drawable/logo_w"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->

    <com.hjsmallfly.syllabus.customviews.WrapContentHeightViewPager
        android:id="@+id/bannerViewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/bannerViewPager"
        android:orientation="vertical"
        android:id="@+id/input_area"
        tools:context=".MainActivity">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <!--android:background="#46ffffff"-->
            <LinearLayout

                android:orientation="vertical"
                android:layout_width="match_parent"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:background="@android:color/white"
                    android:focusableInTouchMode="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content">


                    <!--<TextView-->

                        <!--android:text="@string/username"-->
                        <!--android:gravity="center"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_marginLeft="2dp"-->
                        <!--android:layout_width="0dp"-->

                        <!--android:layout_height="wrap_content" />-->

                    <!--android:background="@drawable/text_shape"-->
                    <EditText
                        android:id="@+id/username_edit"
                        android:hint="@string/username_hint"
                        android:singleLine="true"

                        android:layout_margin="1dp"
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--<TextView-->
                        <!--android:gravity="center"-->
                        <!--android:text="@string/password"-->
                        <!--android:layout_weight="1"-->

                        <!--android:layout_marginLeft="2dp"-->
                        <!--android:layout_width="0dp"-->
                        <!--android:layout_height="wrap_content" />-->

                    <EditText
                        android:id="@+id/password_edit"

                        android:layout_weight="6"
                        android:hint="@string/password_hint"
                        android:singleLine="true"
                        android:layout_margin="1dp"
                        android:inputType="textPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/debug_ip_edit"
            android:text="@string/server_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--android:background="@drawable/button_shape2"-->
        <Button
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="30dp"
            android:textSize="22sp"
            android:background="@android:color/holo_blue_light"
            android:id="@+id/query_syllabus_button"
            android:textColor="#ffffff"
            android:text="@string/query_syllabus_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textSize="15sp"
        android:id="@+id/help_message_view"
        android:layout_above="@+id/year_semester_selection"
        android:gravity="right"
        android:layout_marginRight="10dp"
        android:text="@string/help_message"
        android:textColor="@android:color/holo_red_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:id="@+id/year_semester_selection"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:gravity="center"
            android:id="@+id/year_spinner"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <Spinner
            android:gravity="center"
            android:id="@+id/semester_spinner"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>



</RelativeLayout>
